<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2012 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Can\'t Lose Breakout</string>
    <string name="button_newGame">New Game</string>
    <string name="button_resumeGame">Resume Game</string>
    <string name="button_about">About</string>
    
    <string name="checkbox_neverLoseBall">Never lose ball</string>
    <string name="checkbox_soundEffectsEnabled">Sound effects</string>
    
    <string name="text_highScoreLabel">High Score:</string>
    
    <string name="about_text">\nA silly modification of the Android-Breakout game.\n\nJust try to lose :) \n\nhttps://github.com/jjerome00/android-breakout\n</string>
    
    <string name="msg_ready">Ready?</string>
    <string name="msg_game_over">Game Over</string>
    <string name="msg_winner">Winner!</string>
    
    <string name="difficulty">Difficulty: </string>
    <string name="ok">OK</string>
    
    <string-array name="difficulty_level_names">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Absurd</item>
    </string-array>
</resources>    
